--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "airon",
   "version": "0.1.0",
+  "homepage": "https://airon.github.io/portfolio/",
+  "deploy": "gh-pages -d build",
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.10.5",
