--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "three": "0.121.0",
+    "vanta": "0.5.21"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0",
-    "react-router-dom": "^6.6.2"
+    "react-router-dom": "^6.6.2",
+    "vanta": "^0.5.24"
   }
 }
