--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4",
     "three": "0.121.0",
-    "vanta": "0.5.21"
+    "typescript": "^4.9.4",
+    "vanta": "0.5.21",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@emailjs/browser": "^3.10.0",
     "gh-pages": "^4.0.0",
     "react-router-dom": "^6.6.2",
     "vanta": "^0.5.24"
