--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-scripts": "5.0.1",
     "three": "0.121.0",
     "typescript": "^4.9.4",
-    "vanta": "0.5.21",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,7 +50,6 @@
   "devDependencies": {
     "@emailjs/browser": "^3.10.0",
     "gh-pages": "^5.0.0",
-    "react-router-dom": "^6.6.2",
-    "vanta": "^0.5.24"
+    "react-router-dom": "^6.6.2"
   }
 }
