--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@emailjs/browser": "^3.10.0",
     "gh-pages": "^5.0.0",
     "react-router": "^6.8.1",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "react-router-hash-link": "^2.4.3"
   }
 }
