--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "airon",
   "version": "0.1.0",
-  "homepage": "https://aironherbert.github.io/portfolio/",
+  "homepage": "https://aironherbert.github.io/",
   "private": true,
   "dependencies": {
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.0",
+    "@mui/joy": "^5.0.0-beta.17",
     "@mui/lab": "^5.0.0-alpha.115",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,7 +16,9 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "d3": "^7.8.5",
     "dotenv": "^16.0.3",
+    "markdown-to-jsx": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -50,7 +54,7 @@
     "@emailjs/browser": "^3.10.0",
     "gh-pages": "^5.0.0",
     "react-router": "^6.8.1",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.20.1",
     "react-router-hash-link": "^2.4.3"
   }
 }
